update jvm gc